# rsa-messager

./: .gitignore  README.md  default.code-workspace  t
.github/workflows/: rust.yml  rust.yml.disabled
client/: .gitignore  Cargo.toml  config.toml
client/src/: consts.rs  main.rs
client/src/encryption/: rsa.rs
client/src/file/: info.rs  mod.rs  tools.rs
client/src/file/downloader/: index.rs  worker.rs
client/src/file/uploader/: index.rs  mod.rs  worker.rs
client/src/input/: receiver.rs
client/src/msg/: mod.rs  receive.rs  send.rs  types.rs
client/src/msg/parsing/: mod.rs
client/src/msg/parsing/file/: mod.rs  question_client.rs  question_server.rs  reply.rs
client/src/msg/receive/: index.rs  mod.rs
client/src/msg/receive/packets/: error.rs  file_question.rs  file_question_reply.rs  from.rs  mod.rs  symm_key.rs  uid.rs  want_symm_key.rs
client/src/msg/receive/packets/file/: file_question.rs  file_question_reply.rs  mod.rs  start_processing.rs
client/src/msg/receive/packets/file/chunk/: abort.rs  downloaded.rs  mod.rs  ready.rs
client/src/msg/receive/packets/file/question/: index.rs  reply.rs
client/src/msg/send/: index.rs  mod.rs
client/src/msg/send/actions/: index.rs  mod.rs  name.rs  receiver.rs  send.rs
client/src/util/: arcs.rs  consts.rs  mod.rs  modes.rs  msg.rs  tools.rs  types.rs
client/src/web/: cursor.rs  mod.rs  prefix.rs  progress.rs  user_info.rs
packets/: Cargo.toml
packets/src/: consts.rs  lib.rs  types.rs
packets/src/communication/: error.rs  from.rs  key_reply.rs  key_reply_encrypted.rs  key_request.rs  mod.rs  to.rs
packets/src/encryption/: sign.rs
packets/src/file/: mod.rs  question_client.rs  question_server.rs  types.rs
packets/src/file/chunk/: index.rs
packets/src/file/processing/: abort.rs  downloaded.rs  mod.rs  ready.rs  start.rs  tools.rs
packets/src/file/question/: index.rs  mod.rs  reply.rs
packets/src/initialize/: mod.rs  name.rs  pubkey.rs  uid_reply.rs
packets/src/other/: info.rs  key_iv.rs  mod.rs
packets/src/packets/file/: reply.rs
packets/src/util/: converter.rs  mod.rs  modes.rs  rsa.rs  tools.rs  vec.rs
server/: .gitignore  Cargo.toml  config.toml  package.json
server/frontend/public/: manifest.json
server/src/: main.rs
server/src/file/: consts.rs  info.rs  mod.rs  tools.rs  types.rs
server/src/file/controller/: index.rs
server/src/frontend/: index.html
server/src/msg/parsing/: types.rs
server/src/msg/parsing/file/: mod.rs  question_client.rs  question_server.rs  reply.rs
server/src/routes/: index.rs  info.rs  list.rs  mod.rs  router.rs
server/src/routes/chat/: connect.rs  disconnect.rs  message.rs  mod.rs
server/src/routes/chat/messages/: file_question.rs  file_question_reply.rs  index.rs  mod.rs  name.rs  pubkey.rs  symm_key.rs  to.rs  uid.rs  want_symm.rs
server/src/routes/chat/messages/file/: abort.rs  downloaded.rs  mod.rs  ready.rs  ready.rs.disabled
server/src/routes/chat/messages/question/: mod.rs  question.rs
server/src/routes/files/: download.rs  mod.rs  upload.rs
server/src/utils/: arcs.rs  mod.rs  modes.rs  stream.rs  tools.rs  types.rs  warp_public.rs
