[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
futures-util = { version = "0.3.25", default-features = false, features = ["sink"] }
tokio-stream = "0.1.11"
url = "2.2.2"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"]}
reqwest = "0.11.13"
anyhow = "1.0.68"
serde_json = "1.0.91"
inquire = "0.5.3"
openssl = "0.10.45"
hex = "0.4.3"
