[package]
name = "rsa-msg"
version = "0.1.1"
edition = "2021"
homepage = "https://sshcrack.me"
repository = "https://github.com/sshcrack/rsa-messenger"
description = "Send files & messages across the internet using RSA / AES. Fast and secure transfer by checking for hashes. This is the client part of the application."
license = "MIT"

[[bin]]
bench = false
path = "src/main.rs"
name = "rsa-msg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
futures-util = { version = "0.3.25", default-features = false, features = ["sink", "io"] }
tokio-stream = "0.1.11"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"]}
anyhow = "1.0.68"
inquire = "0.5.3"
openssl = "0.10.45"
colored = "2.0.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
clap = { version = "4.1.1", features = ["derive"] }
lazy_static = "1.4.0"
async-channel = "1.8.0"
packets = { path = "../packets", package = "rsa-msg-packets" }
#packets = { package = "rsa-msg-packets", version = "0.1.3" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
crossbeam-channel = "0.5.6"
tokio-util = { version = "0.7.4", features = ["codec"], default-features = false}
indicatif = "0.17.3"
futures-core = "0.3.25"
bytes = "1.3.0"
hex = "0.4.3"
fs2 = "0.4.3"
surf = "2.3.2"
async-stream = "0.3.3"
futures = "0.3.26"