[package]
name = "rsa-msg-packets"
version = "0.1.0"
edition = "2021"
description = "A helper crate for rsa-messenger-client as well as rsa-messenger-server."
homepage = "https://sshcrack.me"
repository = "https://github.com/sshcrack/rsa-messenger"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
lazy_static = "1.4.0"
log = "0.4.17"
openssl = "0.10.45"
uuid = "1.2.2"
hex = "0.4.3"
tokio = "1.25.0"
