[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
futures-util = { version = "0.3.25", default-features = false, features = ["sink"] }
uuid ={ version = "1.2.2", features = [ "v4", "fast-rng", "macro-diagnostics" ]}
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["serde_derive"] }
clap = { version = "4.1.1", features = ["derive"] }
warp = "0.3.3"
colorize = "0.1.0"
