[package]
name = "rsa-msg-server"
version = "0.1.0"
edition = "2021"
homepage = "https://sshcrack.me"
repository = "https://github.com/sshcrack/rsa-messenger"
description = "[SERVER] Send files & messages across the internet using RSA / AES. Fast and secure transfer by checking for hashes. This is the server part of the application."
license = "MIT"


[[bin]]
bench = false
path = "src/main.rs"
name = "rsa-msg-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
futures-util = { version = "0.3.25", default-features = false, features = ["sink"] }
uuid ={ version = "1.2.2", features = [ "v4", "fast-rng", "macro-diagnostics" ]}
clap = { version = "4.1.1", features = ["derive"] }
warp = "0.3.3"
colorize = "0.1.0"
anyhow = { version = "1.0.68", features = ["backtrace"] }
lazy_static = "1.4.0"
log = "0.4.17"
readonly = "0.2.3"
#packets = { path = "../packets", package = "rsa-msg-packets" }
packets = { package = "rsa-msg-packets", version = "0.1.2" }
openssl = "0.10.45"
hex = "0.4.3"
tokio-util = "0.7.4"

[features]
env = []
